# Risk-Prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  train.yml
docker/: Dockerfile.api  Dockerfile.ui
models/: .gitkeep
sql/: schema.sql
src/api/: main.py
src/data/: download_data.py  etl.py
src/models/: train.py
src/ui/: app.py
tests/: test_api.py
