[project]
name = "financial-risk-prediction"
version = "1.0.0"
description = "AI-powered financial risk prediction platform"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
ignore = ["E501"]
